要件定義書を改訂（第二版）

--- a/read_document/要件定義書.md
+++ b/read_document/要件定義書.md
@@ -1,1 +1,340 @@
-ss
+以下は、頂いたシステム概要を起点に自動展開した**要件定義＋クラウドアーキ設計の初稿（50枚相当の凝縮版）**です。
+未確定は**Assumption**で明示し、最後に**Issue Radar**と**優先質問**を付けています。必要に応じてこのままPowerPointへ展開可能な粒度で記述しています。
+
+---
+
+### 0. 概要→要件マッピング（要約）
+
+| 観点              | 概要テキストから読み取れる事実 | 要件カテゴリ      |
+| --------------- | --------------- | ----------- |
+| 3つの別バブル返信       | 1リクエスト→3候補生成    | 機能/性能       |
+| 音声アイコン→発音再生     | TTS必須、音声キャッシュ   | 機能/外部IF/性能  |
+| ブックマークアイコン      | 登録/一覧/検索/解除     | 機能/データ/画面   |
+| 削除は確認モーダル       | 取消/確認UI/可用性     | 画面/UX/テスト   |
+| 「今後も学べる英語一覧」    | 永続化・タグ/復習導線     | データ/UX      |
+| 「AIからメッセージが来た際」 | LLM/プロンプト/安全策   | 外部IF/セキュリティ |
+
+---
+
+## 1. はじめに（目的/位置づけ/用語/進め方）
+
+**目的**：英語学習者が提示した学習テーマに対し、AIが**3つの学習メッセージ**を返し、**発音音声**と**ブックマーク**で反復学習できる体験を、**モバイル/ブラウザ**で提供。
+
+**用語（抜粋）**
+
+* バブル：1件の学習メッセージ（テキスト＋音声再生＋ブックマークUI）
+* ブックマーク：学習メッセージを後学習用に保存したレコード
+* TTS：Text-to-Speech、発音音声の生成API
+* LLM：Large Language Model（外部生成AI API）
+
+**進め方**：MoSCoW優先度で機能を段階投入（MVP→拡張）。要件⇄API/DB⇄テストをトレース。
+
+---
+
+## 2. スコープ/非スコープ
+
+**In**：テーマ入力→AI 3案生成、発音音声、ブックマークCRUD、履歴/一覧、基本検索、Web/モバイルWeb、ユーザ登録/認証、管理画面（簡易）。
+**Out（初期）**：学習計画自動生成、SRS間隔最適化、SNS共有、アプリ配信（ネイティブ）、多言語UI、オフライン再生（DL）。
+
+---
+
+## 3. ペルソナ/ユースケース
+
+**ペルソナ**
+
+* P1 学習者：社会人/学生、スマホ中心、スキマ学習
+* P2 管理者：不適切コンテンツ監視、通報対応、辞書/NGワード管理
+
+**ユースケース（要点）**
+
+1. テーマ入力→AIが**3バブル**生成（自動）
+2. 各バブル：**再生**（TTS）/ **ブックマーク**（登録/解除）
+3. ブックマーク一覧：検索/タグ/再生/削除（確認モーダル必須）
+4. 管理：通報審査/凍結、NG語辞書
+
+---
+
+## 4. 業務フロー（As-Is/To-Be）
+
+**To-Be（要点）**
+
+* 入口：自由入力 or 例題テンプレ
+* 生成：LLM→ポストプロセス（長さ/レベル/禁則）→3案
+* 音声：TTS同期生成（短文）＋CDNキャッシュ
+* 復習：ブックマーク一覧→再生→タグ/完了チェック
+
+```mermaid
+flowchart LR
+U[学習者] -->|テーマ入力| API[/API GW/]
+API --> LLM[(LLM API)]
+LLM --> PS[ポストプロセス/禁則]
+PS --> TTS[(TTS API)]
+TTS --> CDN[(CDN/オブジェクトストア)]
+PS --> DB[(RDS/PostgreSQL)]
+CDN --> U
+DB --> U
+U -->|BM登録/解除| API
+API --> DB
+```
+
+---
+
+## 5. 機能要件（抜粋：仕様/受入/例外/権限）
+
+| ID     | 説明             | 受入条件(要点)               | 優先 | 依存            | 権限/例外                        |
+| ------ | -------------- | ---------------------- | -- | ------------- | ---------------------------- |
+| FR-001 | テーマ入力→3メッセージ生成 | 入力→≤3sで3件表示(P95)、NG語除去 | M  | LLM/TTS/Cache | 学習者/エラー:LLM失敗時はリトライ+案縮退(≤1件) |
+| FR-002 | メッセージ再生        | クリック→≤300ms開始(P95)     | M  | TTS/CDN       | 匿名不可                         |
+| FR-003 | ブックマーク登録       | 重複禁止、成功トースト            | M  | DB/ID連携       | 401/409適切                    |
+| FR-004 | ブックマーク一覧       | ページング/検索/タグ            | M  | DB/Index      |                              |
+| FR-005 | ブックマーク削除       | 確認モーダル→削除　取消可          | M  | DB            |                              |
+| FR-006 | 履歴（直近50）       | 直近照会/再生成               | S  | DB            |                              |
+| FR-007 | 通報/管理          | NG語辞書/凍結               | S  | Admin         | RBAC必須                       |
+
+**API I/O（例）**
+
+* `POST /v1/messages: {topic, level?} -> {messages:[{id,text,audioUrl?,tags[]}]}`
+* `POST /v1/bookmarks: {messageId} -> 201`
+* `GET /v1/bookmarks?q&tag&page`
+* `DELETE /v1/bookmarks/{id}?confirm=true`（confirm未指定は400）
+
+---
+
+## 6. 非機能要件（16分類：初期目標値）
+
+| 区分               | 目標/測定/根拠（要点）                                                  |
+| ---------------- | ------------------------------------------------------------- |
+| 1 ユーザビリティ        | 3タップ以内で再生/保存。NPS≥40。モーダルで破壊操作確認。                              |
+| 2 開発方式           | Trunk-based＋PRレビュー≥1名。静的解析/脆弱性スキャンCI必須。                       |
+| 3 規模             | 10k MAU/1k DAU/Peak同時200/QPSpeak=10。月成長20%。                   |
+| 4 性能             | 生成完了P95≤3.0s（短文/キャッシュ活用）、再生開始P95≤300ms、API P95≤150ms。         |
+| 5 信頼性            | 可用性≥99.9%（月間）。API MTTR≤30m。TTS/LLM障害時は縮退(キャッシュ/既存例文)。         |
+| 6 拡張性            | 水平スケール(ECS/ASG)。TTS/LLM抽象化（プロバイダ差替可）。                         |
+| 7 上位互換性          | ブラウザES2022/モバイルSafari/Chrome最新-1サポート。                         |
+| 8 中立性            | ベンダロック低減(標準PostgreSQL/HTTP/OCIイメージ)。代替TTS/LLM定義。              |
+| 9 BCP/DR         | RPO≤1h/RTO≤1h。DBスナップショット1日1回＋Point-in-Time。                   |
+| 10 セキュリティ        | OAuth2.1/OIDC、RBAC、At-Rest AES-256/In-Transit TLS1.2+、PII最小化。 |
+| 11 稼働環境          | Cloud(推奨AWS)/CDN/モバイルWeb。                                     |
+| 12 可観測性          | 収集：ログ/メトリクス/トレース。保持90日(PIIマスク)。SLI：レイテンシ/エラー率/音声生成失敗率。        |
+| 13 テスト           | E2E（Playwright）、API契約、負荷(100→500rps ramp)、カナリア。               |
+| 14 移行            | 初期データ不要。将来：タグ体系移行手順定義。                                        |
+| 15 教育            | 運用Runbook/管理画面操作手順/障害訓練四半期。                                   |
+| 16 運用保守          | SLO:可用性99.9/再生P95≤300ms。変更管理：週次定例/変更審査。                       |
+
+---
+
+## 7. データ要件（論理/保持/監査）
+
+**主エンティティ（論理）**
+
+* User(id, email, locale, role)
+* Message(id, text, topic, level, createdAt, providerMeta)
+* Audio(id, messageId, url, voice, format, durationSec, hash)
+* Bookmark(id, userId, messageId, tags[], createdAt)
+* AbuseReport(id, targetType, targetId, reason, status)
+* AuditLog(id, actor, action, target, ts, ip)
+
+**保持/マスキング**
+
+* PII最小保持。メールはハッシュ検索可。ログはIP末尾マスク。
+* 保持：Bookmark/Message=無期限（ユーザ要求で削除可）、Rawログ90日、集計1年。
+
+---
+
+## 8. 画面要件（主要UI/アクセシビリティ）
+
+* 画面：①テーマ入力 ②3バブル結果 ③ブックマーク一覧 ④設定（音声/速度） ⑤管理
+* A11y：キーボード操作、音声ボタンに`aria-label="発音再生"`, コントラスト比≥4.5。
+* 対応：Chrome/Safari/Firefox/Edge 最新-1、iOS/Android最新-1。
+
+---
+
+## 9. 外部インタフェース一覧
+
+| 連携先       | 方向  | 方式    | 頻度  | フォーマット     | SLA |
+| --------- | --- | ----- | --- | ---------- | --------------- |
+| LLM       | 双方向 | REST  | 随時  | JSON       | 99.9%           |
+| TTS       | 送受  | REST  | 随時  | JSON/Audio | 99.9%           |
+| Auth(IdP) | 双方向 | OIDC  | 認証時 | JWT/OIDC   | 99.95%          |
+| CDN       | 配信  | HTTPS | 常時  | 音声/静的      | 99.9%           |
+
+---
+
+## 10. テスト方針（受入/設計技法）
+
+* **受入例**：FR-001 3件生成／P95≤3s／禁則適用／異常時縮退。
+* **設計技法**：同値/境界（入力長0/1/140/…）、原因結果（NG語→置換/拒否）、決定表（削除確定/取消）。
+* **負荷**：Peak QPS=10（Assumption）→余裕2倍設計、音声キャッシュ効果測定。
+
+---
+
+## 11. 運用・SRE
+
+* **SLI/SLO**：APIレイテンシ/エラー率、音声再生開始P95、生成失敗率<0.5%。
+* **監視→アラート→Runbook**：LLM/TTS失敗率>1%（5分）→プロバイダ切替/キャッシュ強制。
+* **バックアップ**：DB PITR、オブジェクトバージョニング。
+* **RPO/RTO**：≤1h/≤1h。
+
+---
+
+## 12. セキュリティ
+
+* **認証/認可**：OIDC＋短命トークン、RBAC（User/Admin）。
+* **暗号化**：At-Rest(AES-256)、In-Transit(TLS1.2+)。
+* **鍵管理**：Secrets Manager/KMS。
+* **脅威対策**：レート制限、プロンプトインジェクション対策（サニタイズ/システムプロンプト固定）、監査ログ。
+
+---
+
+## 13. 体制・RACI/スケジュール（初期）
+
+| 項目    | R   | A      | C       | I     |
+| ----- | --- | ------ | ------- | ----- |
+| 要件確定  | BA  | PO     | Eng/QA  | Stake |
+| アーキ決定 | SA  | PO     | Sec/Dev | Ops   |
+| 実装    | Eng | EngMgr | QA      | PO    |
+| 受入    | QA  | PO     | BA      | Stake |
+
+**計画（目安）**：M0要件、M1-M2実装、M3β、M4本番。
+
+---
+
+## 14. リスク/未決/前提
+
+| ID    | 事象             | 影響     | Mitigation         |
+| ----- | -------------- | ------ | ------------------ |
+| RS-01 | LLM/TTS外部SLA依存 | 可用性/体験 | キャッシュ/多プロバイダ抽象化/縮退 |
+| RS-02 | 音声コスト増         | 粗利悪化   | 文字数制御/合成再利用/事前生成   |
+| RS-03 | 未成年利用/法務       | 規約/保存  | 年齢同意/リーガルレビュー      |
+
+---
+
+## 15. 別紙（抜粋）
+
+* 機能一覧、外部IF仕様、画面一覧、運用台帳（テンプレ同梱想定）
+
+---
+
+# C. インフラ構成アーキ（推奨＋代替）
+
+### 推奨（AWSリファレンス）
+
+* **Compute**：ECS Fargate(API/SSR)
+* **Storage/DB**：S3(静的/音声)/RDS PostgreSQL、**Cache**：ElastiCache Redis
+* **Network/CDN**：CloudFront + WAF、ALB
+* **Queue**：SQS（音声/生成の非同期化オプション）
+* **ID/Secret**：Cognito / Secrets Manager / KMS
+* **CI/CD**：GitHub Actions → ECR/ECS / IaC：Terraform
+* **監視**：CloudWatch + OpenTelemetry + Grafana
+
+```mermaid
+flowchart TB
+User --> CF[CloudFront/WAF] --> ALB --> ECS[(ECS API)]
+ECS --> RDS[(RDS Postgres)]
+ECS --> REDIS[(ElastiCache)]
+ECS --> LLM[(LLM Provider)]
+ECS --> TTS[(TTS Provider)]
+TTS --> S3[(S3 Audio)]
+S3 --> CF
+ECS <-- SQS[(SQS)]  %% 非同期化時
+ECS --> SM[SecretsMgr/KMS]
+```
+
+**シーケンス：テーマ→3案生成→音声**
+
+```mermaid
+sequenceDiagram
+participant U as User
+participant API as API(ECS)
+participant L as LLM
+participant T as TTS
+participant S as S3/CDN
+
+U->>API: POST /messages{topic}
+API->>L: prompt(topic, policy)
+L-->>API: 3 texts
+par TTS fan-out
+  API->>T: text[1..3]
+  T-->>API: audioURL[1..3]
+  API->>S: store audio
+end
+API-->>U: JSON(3 texts + audio URLs)
+U->>S: GET audio (CDN cache)
+```
+
+### NFR適合（要点）
+
+* 冗長：マルチAZ（RDS/ECS/ALB）
+* スケール：ECSオートスケール、CloudFrontキャッシュヒット率>90%目標
+* セキュリティ：WAF/レート制限、最小権限IAM、KMS鍵分離
+* DR：RPO/RTO≤1h（RDSスナップショット/レプリカ）
+
+### コスト概算
+
+**前提**：10k MAU/1k DAU、1日2リクエスト/DAU、1リクエスト=3バブル（平均100文字/バブル）
+
+* 月間バブル数 ≈ 1k×2×30×3 = **180k**
+* TTS文字数 ≈ 180k×100 = **18M chars**
+
+| リソース       | 概算             | 式/前提                                |
+| ---------- | -------------- | ----------------------------------- |
+| CloudFront | $50–120        | 100GB–300GB配信想定                     |
+| ECS(API)   | $120–300       | Fargate ~0.25–0.5 vCPU×常時/AutoScale |
+| RDS(PG)    | $120–250       | db.t4g.medium相当                     |
+| S3(音声+静的)  | $20–60         | 100–300GB                           |
+| TTS        | $200–600       | 18M chars × 単価（ベンダ依存）               |
+| LLM        | $150–500       | 3出力/req × 60k req/月 × 単価            |
+| 監視/ログ      | $30–80         | CW/図面/Grafana                       |
+| **合計**     | **$690–1,910** | 変動大（TTS/LLM単価に強依存）                  |
+
+**最適化案**：①短文方針/文字数制御 ②音声キャッシュ＆再利用キー（text+voice+speedのhash）③夜間一括事前合成 ④段階的CDN TTL延長。
+
+### 代替案×2
+
+1. **GCP**：Cloud Run + Cloud SQL(Postgres) + Cloud Storage + Cloud CDN + Cloud TTS + IAM
+
+   * 長：サーバレス/スケール容易、TTS品質
+   * 短：価格/地域/既存ナレッジ依存
+2. **Azure**：App Service/Container Apps + PostgreSQL Flexible + Cognitive TTS + Front Door/WAF
+
+   * 長：エンタープライズ統合
+   * 短：学習向けPricingが上振れしやすい
+
+**切替容易性**：TTS/LLMは**Provider Adapter**で抽象化（同一I/F）。DBは標準PG、IaCで再現性確保。
+
+---
+
+# 要求⇄機能⇄API/DB⇄テスト（トレース抜粋）
+
+| 要求    | 機能ID     | API                    | DB       | 受入テスト       |
+| ----- | -------- | ---------------------- | -------- | ----------- |
+| 3案提示  | FR-001   | POST /messages         | Message  | 3件/≤3s/P95  |
+| 発音再生  | FR-002   | GET CDN /audio         | Audio    | 再生開始≤300ms  |
+| 保存/解除 | FR-003/5 | POST/DELETE /bookmarks | Bookmark | 重複禁止/確認モーダル |
+| 一覧/検索 | FR-004   | GET /bookmarks         | Bookmark | ページング/検索一致  |
+
+---
+
+# D. Issue Radar（自動抽出）
+
+| ID    | 区分      | 事象                     | 業務影響      | 推奨アクション                | 期限    | 担当  | 優先 |
+| ----- | ------- | ---------------------- | --------- | ---------------------- | ----- | --- | -- |
+| IR-01 | 非機能/性能  | **P95 3s**根拠未確定（文長/回数） | 体感遅延      | **POC負荷試験**（LLM/TTS混在） | M0+2w | SRE | H  |
+| IR-02 | データ/コスト | **TTS文字数**不定→コスト振れ     | 予算超過      | 文字数上限/短文化ガイド           | M0+2w | PO  | H  |
+| IR-03 | セキュリティ  | 児童/未成年条項・保存年限未定        | 法務リスク     | **リーガル確認**(規約/年齢同意)    | M0+3w | 法務  | H  |
+| IR-04 | 機能/UX   | ブックマーク検索軸（タグ/全文）未定     | 回遊/復習効率低下 | **WS**で検索要件合意          | M0+2w | BA  | M  |
+| IR-05 | 外部IF    | LLM/TTS代替可否/優先順位不明     | 障害時縮退不可   | Provider評価**ベンチ**      | M0+3w | SA  | H  |
+| IR-06 | 運用      | 監視しきい値/Runbook詳細未      | 復旧遅延      | 監視指標とRunbook整備         | M1    | SRE | M  |
+| IR-07 | 法規      | 個人データ国外移転有無不明          | コンプラ     | データ所在/越境確認             | M0+2w | 法務  | H  |
+
+---
+
+## 優先質問（不明点を上から順に解消）
+
+1. **ターゲット文量/難易度**：1バブル平均文字数/語彙レベル（CEFR等）は？（性能・コスト直結）
+2. **DAU/ピーク**：初期と6か月後の利用規模目標？（スケール/コスト設計）
+3. **音声要件**：声種/速度/感情、再生の**自動 vs クリック**規約方針？（A11y/自動再生制限）
+4. **検索要件**：ブックマークの検索軸（全文/タグ/レベル/日付/既学習フラグ）と並び順は？
+5. **法務/年齢**：未成年利用の可否、規約/同意フロー、データ保存年限/国外移転の可否？
+6. **LLM/TTS選定方針**：コスト/品質/データ扱いの優先順位と第2候補は？
+7. **多言語/音声品質**：英語以外の将来拡張（JP→ENの双方向など）の前提は？
