要件定義書改訂

--- a/read_document/要件定義書.md
+++ b/read_document/要件定義書.md
@@ -20,14 +20,23 @@
 
 **目的**：英語学習者が提示した学習テーマに対し、AIが**3つの学習メッセージ**を返し、**発音音声**と**ブックマーク**で反復学習できる体験を、**モバイル/ブラウザ**で提供。
 
+**技術スタック**
+
+* **フロントエンド/バックエンド**：Next.js（App Router、Server Actions）
+* **認証/データベース/API**：Supabase（認証、PostgreSQL、Realtime、Storage）
+* **AI統合**：Vercel AI SDK（LLM/TTS統合）
+* **デプロイ/ホスティング**：Vercel（Edge Network、Serverless Functions）
+* **音声生成**：TTS API（Vercel AI SDK経由、または直接統合）
+
 **用語（抜粋）**
 
 * バブル：1件の学習メッセージ（テキスト＋音声再生＋ブックマークUI）
 * ブックマーク：学習メッセージを後学習用に保存したレコード
 * TTS：Text-to-Speech、発音音声の生成API
-* LLM：Large Language Model（外部生成AI API）
+* LLM：Large Language Model（Vercel AI SDK経由で統合）
+* Server Actions：Next.jsのサーバーサイドアクション（APIルート不要でデータ操作）
 
-**進め方**：MoSCoW優先度で機能を段階投入（MVP→拡張）。要件⇄API/DB⇄テストをトレース。
+**進め方**：MoSCoW優先度で機能を段階投入（MVP→拡張）。要件⇄Server Actions/DB⇄テストをトレース。
 
 ---
 
@@ -65,16 +74,15 @@
 
 ```mermaid
 flowchart LR
-U[学習者] -->|テーマ入力| API[/API GW/]
-API --> LLM[(LLM API)]
+U[学習者] -->|テーマ入力| NextJS[Next.js App]
+NextJS -->|Server Actions| LLM[(AI SDK/LLM)]
 LLM --> PS[ポストプロセス/禁則]
-PS --> TTS[(TTS API)]
-TTS --> CDN[(CDN/オブジェクトストア)]
-PS --> DB[(RDS/PostgreSQL)]
-CDN --> U
-DB --> U
-U -->|BM登録/解除| API
-API --> DB
+PS --> TTS[(AI SDK/TTS)]
+TTS --> Supabase[(Supabase Storage)]
+PS --> Supabase[(Supabase DB)]
+Supabase -->|CDN| U
+U -->|BM登録/解除| NextJS
+NextJS -->|Server Actions| Supabase
 ```
 
 ---
