要件定義書修正

--- a/read_document/要件定義書.md
+++ b/read_document/要件定義書.md
@@ -99,12 +99,13 @@ NextJS -->|Server Actions| Supabase
 | FR-006 | 履歴（直近50）       | 直近照会/再生成               | S  | DB            |                              |
 | FR-007 | 通報/管理          | NG語辞書/凍結               | S  | Admin         | RBAC必須                       |
 
-**API I/O（例）**
+**Server Actions / API I/O（例）**
 
-* `POST /v1/messages: {topic, level?} -> {messages:[{id,text,audioUrl?,tags[]}]}`
-* `POST /v1/bookmarks: {messageId} -> 201`
-* `GET /v1/bookmarks?q&tag&page`
-* `DELETE /v1/bookmarks/{id}?confirm=true`（confirm未指定は400）
+* `generateMessages(topic, level?)` → `{messages:[{id,text,audioUrl?,tags[]}]}`（Server Action）
+* `createBookmark(messageId)` → `{id, ...}`（Server Action）
+* `getBookmarks(q?, tag?, page?)` → `{bookmarks[], total}`（Server Action）
+* `deleteBookmark(id, confirm)` → `void`（confirm未指定はエラー、Server Action）
+* 認証：Supabase Auth（`createClient()`でクライアントサイド、Server Actionsでサーバーサイド）
 
 ---
 
@@ -113,18 +114,18 @@ NextJS -->|Server Actions| Supabase
 | 区分               | 目標/測定/根拠（要点）                                                  |
 | ---------------- | ------------------------------------------------------------- |
 | 1 ユーザビリティ        | 3タップ以内で再生/保存。NPS≥40。モーダルで破壊操作確認。                              |
-| 2 開発方式           | Trunk-based＋PRレビュー≥1名。静的解析/脆弱性スキャンCI必須。                       |
+| 2 開発方式           | Trunk-based＋PRレビュー≥1名。静的解析/脆弱性スキャンCI必須（GitHub Actions + Vercel自動デプロイ）。                       |
 | 3 規模             | 10k MAU/1k DAU/Peak同時200/QPSpeak=10。月成長20%。                   |
-| 4 性能             | 生成完了P95≤3.0s（短文/キャッシュ活用）、再生開始P95≤300ms、API P95≤150ms。         |
-| 5 信頼性            | 可用性≥99.9%（月間）。API MTTR≤30m。TTS/LLM障害時は縮退(キャッシュ/既存例文)。         |
-| 6 拡張性            | 水平スケール(ECS/ASG)。TTS/LLM抽象化（プロバイダ差替可）。                         |
+| 4 性能             | 生成完了P95≤3.0s（短文/キャッシュ活用）、再生開始P95≤300ms、Server Actions P95≤150ms。         |
+| 5 信頼性            | 可用性≥99.9%（月間）。Server Actions MTTR≤30m。TTS/LLM障害時は縮退(キャッシュ/既存例文、AI SDK経由でプロバイダ切替)。         |
+| 6 拡張性            | 水平スケール(Vercel Serverless Functions自動スケール)。TTS/LLM抽象化（Vercel AI SDKでプロバイダ差替可）。                         |
 | 7 上位互換性          | ブラウザES2022/モバイルSafari/Chrome最新-1サポート。                         |
-| 8 中立性            | ベンダロック低減(標準PostgreSQL/HTTP/OCIイメージ)。代替TTS/LLM定義。              |
-| 9 BCP/DR         | RPO≤1h/RTO≤1h。DBスナップショット1日1回＋Point-in-Time。                   |
-| 10 セキュリティ        | OAuth2.1/OIDC、RBAC、At-Rest AES-256/In-Transit TLS1.2+、PII最小化。 |
-| 11 稼働環境          | Cloud(推奨AWS)/CDN/モバイルWeb。                                     |
-| 12 可観測性          | 収集：ログ/メトリクス/トレース。保持90日(PIIマスク)。SLI：レイテンシ/エラー率/音声生成失敗率。        |
-| 13 テスト           | E2E（Playwright）、API契約、負荷(100→500rps ramp)、カナリア。               |
+| 8 中立性            | ベンダロック低減(標準PostgreSQL/Supabase、標準HTTP/Next.js、Vercel AI SDKでプロバイダ抽象化)。代替TTS/LLM定義（AI SDK対応プロバイダ切替容易）。              |
+| 9 BCP/DR         | RPO≤1h/RTO≤1h。Supabase自動バックアップ（PITR）、Vercelデプロイ履歴保持。                   |
+| 10 セキュリティ        | Supabase Auth（OAuth2.1/OIDC）、Row Level Security（RLS）でRBAC、At-Rest（Supabase自動暗号化）/In-Transit TLS1.2+（Vercel Edge自動）、PII最小化。 |
+| 11 稼働環境          | Vercel（Edge Network、グローバルCDN）/Supabase（マルチリージョン）/モバイルWeb対応。                                     |
+| 12 可観測性          | 収集：Vercel Analytics（ログ/メトリクス）、Supabase Dashboard（DB/Storage）、カスタムログ。保持90日(PIIマスク)。SLI：レイテンシ/エラー率/音声生成失敗率。        |
+| 13 テスト           | E2E（Playwright）、Server Actions単体テスト、負荷(100→500rps ramp、Vercel Edge負荷分散)、カナリア（Vercel Preview Deployments）。               |
 | 14 移行            | 初期データ不要。将来：タグ体系移行手順定義。                                        |
 | 15 教育            | 運用Runbook/管理画面操作手順/障害訓練四半期。                                   |
 | 16 運用保守          | SLO:可用性99.9/再生P95≤300ms。変更管理：週次定例/変更審査。                       |
@@ -159,12 +160,14 @@ NextJS -->|Server Actions| Supabase
 
 ## 9. 外部インタフェース一覧
 
-| 連携先       | 方向  | 方式    | 頻度  | フォーマット     | SLA |
-| --------- | --- | ----- | --- | ---------- | --------------- |
-| LLM       | 双方向 | REST  | 随時  | JSON       | 99.9%           |
-| TTS       | 送受  | REST  | 随時  | JSON/Audio | 99.9%           |
-| Auth(IdP) | 双方向 | OIDC  | 認証時 | JWT/OIDC   | 99.95%          |
-| CDN       | 配信  | HTTPS | 常時  | 音声/静的      | 99.9%           |
+| 連携先          | 方向  | 方式           | 頻度  | フォーマット     | SLA   | 実装方式                |
+| ------------ | --- | ------------ | --- | ---------- | ----- | ------------------ |
+| LLM          | 双方向 | Vercel AI SDK | 随時  | JSON       | 99.9% | Server Actions経由    |
+| TTS          | 送受  | Vercel AI SDK | 随時  | JSON/Audio | 99.9% | Server Actions経由    |
+| Supabase Auth | 双方向 | REST/JWT     | 認証時 | JWT        | 99.95%| `@supabase/ssr`      |
+| Supabase DB   | 双方向 | PostgREST    | 随時  | JSON       | 99.9% | Server Actions + Client |
+| Supabase Storage | 送受 | REST        | 随時  | 音声ファイル     | 99.9% | Server Actions経由    |
+| Vercel Edge  | 配信  | HTTPS        | 常時  | 静的/動的      | 99.9% | 自動CDN             |
 
 ---
 
@@ -178,19 +181,19 @@ NextJS -->|Server Actions| Supabase
 
 ## 11. 運用・SRE
 
-* **SLI/SLO**：APIレイテンシ/エラー率、音声再生開始P95、生成失敗率<0.5%。
-* **監視→アラート→Runbook**：LLM/TTS失敗率>1%（5分）→プロバイダ切替/キャッシュ強制。
-* **バックアップ**：DB PITR、オブジェクトバージョニング。
-* **RPO/RTO**：≤1h/≤1h。
+* **SLI/SLO**：Server Actionsレイテンシ/エラー率（Vercel Analytics）、音声再生開始P95、生成失敗率<0.5%。
+* **監視→アラート→Runbook**：Vercel Analytics + Supabase Dashboard、LLM/TTS失敗率>1%（5分）→AI SDK経由でプロバイダ切替/キャッシュ強制。
+* **バックアップ**：Supabase自動バックアップ（PITR）、Storageバージョニング。
+* **RPO/RTO**：≤1h/≤1h（Supabaseバックアップ + Vercelデプロイロールバック）。
 
 ---
 
 ## 12. セキュリティ
 
-* **認証/認可**：OIDC＋短命トークン、RBAC（User/Admin）。
-* **暗号化**：At-Rest(AES-256)、In-Transit(TLS1.2+)。
-* **鍵管理**：Secrets Manager/KMS。
-* **脅威対策**：レート制限、プロンプトインジェクション対策（サニタイズ/システムプロンプト固定）、監査ログ。
+* **認証/認可**：Supabase Auth（OIDC/OAuth2.1準拠）＋短命トークン、Row Level Security（RLS）でRBAC（User/Admin）。
+* **暗号化**：At-Rest（Supabase自動暗号化）、In-Transit（TLS1.2+、Vercel Edge自動）。
+* **鍵管理**：Vercel環境変数（暗号化）、Supabase Secrets。
+* **脅威対策**：Vercel Edge Configレート制限、プロンプトインジェクション対策（AI SDK経由でサニタイズ/システムプロンプト固定）、Supabase監査ログ。
 
 ---
 
@@ -225,57 +228,65 @@ NextJS -->|Server Actions| Supabase
 
 # C. インフラ構成アーキ（推奨＋代替）
 
-### 推奨（AWSリファレンス）
+### 推奨（Next.js + Supabase + Vercel）
 
-* **Compute**：ECS Fargate(API/SSR)
-* **Storage/DB**：S3(静的/音声)/RDS PostgreSQL、**Cache**：ElastiCache Redis
-* **Network/CDN**：CloudFront + WAF、ALB
-* **Queue**：SQS（音声/生成の非同期化オプション）
-* **ID/Secret**：Cognito / Secrets Manager / KMS
-* **CI/CD**：GitHub Actions → ECR/ECS / IaC：Terraform
-* **監視**：CloudWatch + OpenTelemetry + Grafana
+* **フロントエンド/バックエンド**：Next.js（App Router、Server Actions、SSR/SSG）
+* **認証/データベース**：Supabase（PostgreSQL、Row Level Security、Realtime）
+* **ストレージ**：Supabase Storage（音声ファイル、CDN配信）
+* **デプロイ/ホスティング**：Vercel（Edge Network、Serverless Functions、自動スケール）
+* **AI統合**：Vercel AI SDK（LLM/TTSプロバイダ抽象化）
+* **CI/CD**：GitHub Actions → Vercel自動デプロイ
+* **監視**：Vercel Analytics + Supabase Dashboard + カスタムログ
 
 ```mermaid
 flowchart TB
-User --> CF[CloudFront/WAF] --> ALB --> ECS[(ECS API)]
-ECS --> RDS[(RDS Postgres)]
-ECS --> REDIS[(ElastiCache)]
-ECS --> LLM[(LLM Provider)]
-ECS --> TTS[(TTS Provider)]
-TTS --> S3[(S3 Audio)]
-S3 --> CF
-ECS <-- SQS[(SQS)]  %% 非同期化時
-ECS --> SM[SecretsMgr/KMS]
+User --> Vercel[Vercel Edge Network]
+Vercel --> NextJS[Next.js App Router]
+NextJS -->|Server Actions| Supabase[(Supabase)]
+Supabase -->|Auth| NextJS
+Supabase -->|DB/Storage| NextJS
+NextJS -->|AI SDK| LLM[(LLM Provider)]
+NextJS -->|AI SDK| TTS[(TTS Provider)]
+TTS --> Supabase[Supabase Storage]
+Supabase -->|CDN| Vercel
+Vercel --> User
 ```
 
-**シーケンス：テーマ→3案生成→音声**
+**シーケンス：テーマ→3案生成→音声（Server Actions使用）**
 
 ```mermaid
 sequenceDiagram
 participant U as User
-participant API as API(ECS)
-participant L as LLM
-participant T as TTS
-participant S as S3/CDN
+participant NextJS as Next.js Server Actions
+participant AI as AI SDK
+participant L as LLM Provider
+participant T as TTS Provider
+participant SB as Supabase
 
-U->>API: POST /messages{topic}
-API->>L: prompt(topic, policy)
-L-->>API: 3 texts
+U->>NextJS: generateMessages(topic)
+NextJS->>AI: streamText(prompt)
+AI->>L: LLM API call
+L-->>AI: 3 texts
+AI-->>NextJS: messages[]
 par TTS fan-out
-  API->>T: text[1..3]
-  T-->>API: audioURL[1..3]
-  API->>S: store audio
+  NextJS->>AI: generateSpeech(text[1..3])
+  AI->>T: TTS API call
+  T-->>AI: audio buffers
+  AI-->>NextJS: audio data
+  NextJS->>SB: upload to Storage
+  SB-->>NextJS: public URLs
 end
-API-->>U: JSON(3 texts + audio URLs)
-U->>S: GET audio (CDN cache)
+NextJS->>SB: save Message records
+NextJS-->>U: {messages: [{id, text, audioUrl}]}
+U->>SB: GET audio (CDN cache)
 ```
 
 ### NFR適合（要点）
 
-* 冗長：マルチAZ（RDS/ECS/ALB）
-* スケール：ECSオートスケール、CloudFrontキャッシュヒット率>90%目標
-* セキュリティ：WAF/レート制限、最小権限IAM、KMS鍵分離
-* DR：RPO/RTO≤1h（RDSスナップショット/レプリカ）
+* 冗長：Vercel Edge Network（グローバル分散）、Supabase（マルチリージョン対応）
+* スケール：Vercel自動スケール（Serverless Functions）、Supabase自動スケール、Edge Networkキャッシュヒット率>90%目標
+* セキュリティ：Vercel Edge Config、Supabase Row Level Security、環境変数管理、レート制限（Vercel Pro以上）
+* DR：Supabase自動バックアップ（PITR）、Vercelデプロイ履歴保持
 
 ### コスト概算
 
@@ -283,43 +294,49 @@ U->>S: GET audio (CDN cache)
 
 * 月間バブル数 ≈ 1k×2×30×3 = **180k**
 * TTS文字数 ≈ 180k×100 = **18M chars**
+* Server Actions実行 ≈ 60k req/月（生成）+ 180k req/月（ブックマーク等）≈ **240k executions**
 
-| リソース       | 概算             | 式/前提                                |
-| ---------- | -------------- | ----------------------------------- |
-| CloudFront | $50–120        | 100GB–300GB配信想定                     |
-| ECS(API)   | $120–300       | Fargate ~0.25–0.5 vCPU×常時/AutoScale |
-| RDS(PG)    | $120–250       | db.t4g.medium相当                     |
-| S3(音声+静的)  | $20–60         | 100–300GB                           |
-| TTS        | $200–600       | 18M chars × 単価（ベンダ依存）               |
-| LLM        | $150–500       | 3出力/req × 60k req/月 × 単価            |
-| 監視/ログ      | $30–80         | CW/図面/Grafana                       |
-| **合計**     | **$690–1,910** | 変動大（TTS/LLM単価に強依存）                  |
+| リソース            | 概算             | 式/前提                                |
+| --------------- | -------------- | ----------------------------------- |
+| Vercel Pro      | $20            | 固定料金（Hobby $0、Pro $20/月）            |
+| Vercel Functions | $0–50          | 240k executions（無料枠内または超過分）        |
+| Supabase Pro    | $25            | 固定料金（Free $0、Pro $25/月）             |
+| Supabase DB     | $0–30          | 10GBストレージ、50GB転送（無料枠内または超過分）    |
+| Supabase Storage | $0–20          | 100–300GB音声ファイル（無料枠内または超過分）      |
+| TTS             | $200–600       | 18M chars × 単価（ベンダ依存）               |
+| LLM             | $150–500      | 3出力/req × 60k req/月 × 単価            |
+| 監視/ログ           | $0–20          | Vercel Analytics（Pro含む）、Supabase Dashboard |
+| **合計**          | **$395–1,265** | 変動大（TTS/LLM単価に強依存、初期は$400–600想定）  |
 
-**最適化案**：①短文方針/文字数制御 ②音声キャッシュ＆再利用キー（text+voice+speedのhash）③夜間一括事前合成 ④段階的CDN TTL延長。
+**最適化案**：①短文方針/文字数制御 ②音声キャッシュ＆再利用キー（text+voice+speedのhash）③Server Actionsでのキャッシュ活用（`unstable_cache`）④Supabase Storage CDN TTL延長 ⑤Vercel Edge Configで設定管理。
 
 ### 代替案×2
 
-1. **GCP**：Cloud Run + Cloud SQL(Postgres) + Cloud Storage + Cloud CDN + Cloud TTS + IAM
+1. **Next.js + AWS Amplify + RDS**
 
-   * 長：サーバレス/スケール容易、TTS品質
-   * 短：価格/地域/既存ナレッジ依存
-2. **Azure**：App Service/Container Apps + PostgreSQL Flexible + Cognitive TTS + Front Door/WAF
+   * 長：AWS統合、既存インフラ活用
+   * 短：Supabaseの開発体験/Realtime機能が使えない、セットアップ複雑
+2. **Next.js + PlanetScale + Clerk Auth**
 
-   * 長：エンタープライズ統合
-   * 短：学習向けPricingが上振れしやすい
+   * 長：PlanetScaleのスケーラビリティ、Clerkの認証機能
+   * 短：ストレージ別途必要、コスト上振れしやすい
 
-**切替容易性**：TTS/LLMは**Provider Adapter**で抽象化（同一I/F）。DBは標準PG、IaCで再現性確保。
+**切替容易性**：
+* TTS/LLMは**Vercel AI SDK**で抽象化（同一I/F、プロバイダ切替容易）
+* DBは標準PostgreSQL（Supabase→RDS等への移行可能）
+* Server ActionsはNext.js標準機能（フレームワーク依存）
+* 認証はSupabase Auth（OAuth2.1/OIDC準拠、他IdPへの切替可能）
 
 ---
 
 # 要求⇄機能⇄API/DB⇄テスト（トレース抜粋）
 
-| 要求    | 機能ID     | API                    | DB       | 受入テスト       |
-| ----- | -------- | ---------------------- | -------- | ----------- |
-| 3案提示  | FR-001   | POST /messages         | Message  | 3件/≤3s/P95  |
-| 発音再生  | FR-002   | GET CDN /audio         | Audio    | 再生開始≤300ms  |
-| 保存/解除 | FR-003/5 | POST/DELETE /bookmarks | Bookmark | 重複禁止/確認モーダル |
-| 一覧/検索 | FR-004   | GET /bookmarks         | Bookmark | ページング/検索一致  |
+| 要求    | 機能ID     | Server Action / API          | DB（Supabase） | 受入テスト       |
+| ----- | -------- | -------------------------- | ----------- | ----------- |
+| 3案提示  | FR-001   | `generateMessages()`        | Message     | 3件/≤3s/P95  |
+| 発音再生  | FR-002   | Supabase Storage CDN        | Audio       | 再生開始≤300ms  |
+| 保存/解除 | FR-003/5 | `createBookmark()` / `deleteBookmark()` | Bookmark    | 重複禁止/確認モーダル |
+| 一覧/検索 | FR-004   | `getBookmarks()`            | Bookmark    | ページング/検索一致  |
 
 ---
 
@@ -331,7 +348,7 @@ U->>S: GET audio (CDN cache)
 | IR-02 | データ/コスト | **TTS文字数**不定→コスト振れ     | 予算超過      | 文字数上限/短文化ガイド           | M0+2w | PO  | H  |
 | IR-03 | セキュリティ  | 児童/未成年条項・保存年限未定        | 法務リスク     | **リーガル確認**(規約/年齢同意)    | M0+3w | 法務  | H  |
 | IR-04 | 機能/UX   | ブックマーク検索軸（タグ/全文）未定     | 回遊/復習効率低下 | **WS**で検索要件合意          | M0+2w | BA  | M  |
-| IR-05 | 外部IF    | LLM/TTS代替可否/優先順位不明     | 障害時縮退不可   | Provider評価**ベンチ**      | M0+3w | SA  | H  |
+| IR-05 | 外部IF    | LLM/TTS代替可否/優先順位不明（AI SDK対応プロバイダ） | 障害時縮退不可   | Provider評価**ベンチ**（OpenAI/Anthropic/Google等） | M0+3w | SA  | H  |
 | IR-06 | 運用      | 監視しきい値/Runbook詳細未      | 復旧遅延      | 監視指標とRunbook整備         | M1    | SRE | M  |
 | IR-07 | 法規      | 個人データ国外移転有無不明          | コンプラ     | データ所在/越境確認             | M0+2w | 法務  | H  |
 
@@ -344,5 +361,5 @@ U->>S: GET audio (CDN cache)
 3. **音声要件**：声種/速度/感情、再生の**自動 vs クリック**規約方針？（A11y/自動再生制限）
 4. **検索要件**：ブックマークの検索軸（全文/タグ/レベル/日付/既学習フラグ）と並び順は？
 5. **法務/年齢**：未成年利用の可否、規約/同意フロー、データ保存年限/国外移転の可否？
-6. **LLM/TTS選定方針**：コスト/品質/データ扱いの優先順位と第2候補は？
+6. **LLM/TTS選定方針**：Vercel AI SDK対応プロバイダ（OpenAI/Anthropic/Google等）のコスト/品質/データ扱いの優先順位と第2候補は？
 7. **多言語/音声品質**：英語以外の将来拡張（JP→ENの双方向など）の前提は？
